--- a/app/src/main/res/layout/navbar.xml
+++ b/app/src/main/res/layout/navbar.xml
@@ -28,7 +28,7 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginRight="16dp"
-        android:src="@drawable/ic_menu"
+        android:src="@drawable/systemblue"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:contentDescription="@string/app_name"/>
